--- a/RealTimeDataMonitorDemo/docker-compose.yml
+++ b/RealTimeDataMonitorDemo/docker-compose.yml
@@ -1,6 +1,15 @@
 services:
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
   realtime-demo:
     build: .
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST=redis
     ports:
       - "8000:8000"
       - "50051:50051"
