--- a/RealTimeDataMonitorDemo/pyproject.toml
+++ b/RealTimeDataMonitorDemo/pyproject.toml
@@ -15,6 +15,7 @@ grpcio-tools = "^1.73"
 pydantic = "^2.7"
 pytest = "^8.2"
 pytest-asyncio = "^0.23"
+redis = "^6.2.0"
 
 [build-system]
 requires = ["poetry-core"]
